# geodata

./: .gitattributes  .gitignore  00_introduccion.ipynb  01_actividad_solucion.ipynb  01_datos_espaciales.ipynb  README.md  actividad1.md  dem_santiago.ipynb  nasadem_santiago.tif  nasadem_santiago_utm19s.tif  pyproject.toml
datos/eod_stgo/: destinos_viajes.dbf  destinos_viajes.shp  destinos_viajes.shx  origenes_viajes.dbf  origenes_viajes.geojson  origenes_viajes.shp  origenes_viajes.shx
