[project]
name = "geodata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.7.0",
    "datashader>=0.18.2",
    "dem-stitcher>=2.5.13",
    "elevation>=1.1.3",
    "geopandas==0.14.4",
    "jupyter>=1.1.1",
    "matplotlib==3.10.1",
    "pandas==2.2.3",
    "rasterstats>=0.20.0",
    "rioxarray>=0.19.0",
    "seaborn==0.13.2",
]
